--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: fmortens.github.io
+title: fmortens
 email: fmortens@me.com
 description: >- # this means to ignore newlines until "baseurl:"
   Project page for my projects. I will put any information here for all projects and stuff I have going on.
